# pysimplicityhl

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml
demo/: lastwil.wit  lastwill.hl  lastwill.wit  main.py  p2pk.hl  p2pk.wit
pysimplicityhl/: Cargo.toml
pysimplicityhl/src/: lib.rs
