[tool.poetry]
name = "pysimplicityhl"
version = "0.1.0"
description = "Python module for simplicityhl compiler"
authors = ["anonym <anonym@example.com>"]
packages = [{ include = "pysimplicityhl" }]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.7"
poethepoet = "^0.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poe.tasks.build-wheel]
shell = """
# create native modul with maturin
maturin build --manifest-path pysimplicityhl/Cargo.toml --release
# maturin build --manifest-path pysimplicityhl/Cargo.toml --release -i python3.13
# maturin build --manifest-path pysimplicityhl/Cargo.toml --release -i python3.12
# maturin build --manifest-path pysimplicityhl/Cargo.toml --release -i python3.11
# maturin build --manifest-path pysimplicityhl/Cargo.toml --release -i python3.9
# maturin build --manifest-path pysimplicityhl/Cargo.toml --release -i python3.8
# maturin build --manifest-path pysimplicityhl/Cargo.toml --release -i python3.10
poetry run pip install --force-reinstall "$(ls -t target/wheels/pysimplicityhl*.whl | head -n 1)"
"""

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "pysimplicityhl/Cargo.toml"
module-name = "pysimplicityhl"
