[project]
name = "pysimplicityhl"
version = "0.3.9"
description = "Python module for simplicityhl compiler"
readme = "README.md"
authors = [
  { name = "coremoon", email = "237020170+coremoon@users.noreply.github.com" }
]
requires-python = ">=3.9"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "pysimplicityhl/Cargo.toml"
module-name = "pysimplicityhl"
bindings = "pyo3"
# manylinux = "2014"     # only used for linux
strip = true

[tool.poetry]
name = "pysimplicityhl"
version = "0.3.9"
description = "Python module for simplicityhl compiler"
authors = ["coremoon <237020170+coremoon@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.7"
poethepoet = "^0.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poe.tasks.build-wheel]
shell = """
# create native module with maturin
maturin build --manifest-path pysimplicityhl/Cargo.toml --release
poetry run pip install --force-reinstall "$(ls -t target/wheels/pysimplicityhl*.whl | head -n 1)"
"""
